Updates supporting newest JPv3 version